crates/rustframe/tests/ui/fail/main_requires_async.stderr
error: `#[rustframe::main]` requires an async function
 --> tests/ui/fail/main_requires_async.rs:2:1
  |
2 | fn main() {}
  | ^^
